app/styles/main.scss
/* ... */
a {
  text-decoration: none;
  color: $comp1-dark;
  
  &:hover {
    text-decoration: none;
    color: $comp1-light;
  }
}

.main-col {
  display: inline-block;
  width: 67%;
}

.side-col {
  display: inline-block;
  float: right;
  padding: 0 5px;
  width: 31%;
}

.emphasize {
  color: $comp2-dark;
}

// Overide span margin left 20px;
[class*="span"] {
  margin: 0 !important;
}

.b4cm-icon {
  height: 75px;
  width: 75px;
}


.google-map {
  img {
    // Need so icons show
    max-width: none;
  }
}

// Food, Social, Study Icons
.type-icon {
  background: black;
  display: inline-block;
  height: 60px;
  width: 60px;
}

.ad-book {
  @include ad-element;
  height: 125px;
  padding: 5px;
  margin-left: 40px;
  text-align: center;
  width: 220px;

  h6 {
    display: inline-block;
    float: left;
    line-height: 15px;
    margin: 25px 0 0 15px;
    width: 80px;
  }

  img {
    display: inline-block;
    width: 80px;
  }
}

.rating {

  .stars {
    display: inline-block;
  }

  .review-count {
    display: inline-block;
    margin: 0 0 0 5px;
  }
}

.find-spot {
  margin: 0;

  h3 {
    display: inline;
  }

  select {
    //margin: -10px 0 0 10px;
    width: 80px;
  }

  input {
    width: 150px;
  }

  input, select {
    background-color: $acc-dark;
    border: 1px solid $comp1-dark;
    color: $text-light;
    margin: -10px 0 0 10px;
    text-align: center;
    //width: 150px;
  }
}

textarea:focus,
input[type='text']:focus {
  border-color: $comp1-dark;
}

.none {
  color: $text-dark;
}

.none-square {
  background-color: $text-dark;
  box-shadow: 2px 2px 5px 5px $cf-average inset;
}

.empty {
  color: $cf-empty;
}

.empty-square {
  background-color: $cf-empty;
}

.few {
  color: $cf-few;
}

.few-square {
  background-color: $cf-few;
}

.average {
  //color: $cf-average;
  color: $text-dark;
}

.average-square {
  background-color: $cf-average;

}

.crowded {
  color: $cf-crowded;
}

.crowded-square {
  background-color: $cf-crowded;
}

.herd {
  color: $cf-herd;
}

.herd-square {
  background-color: $cf-herd;

}

.closed {
  closed: $cf-closed;
}

.closed-square {
  background-color: $cf-closed;
}

.empty-square, .few-square, .average-square,
.crowded-square, .herd-square, .closed-square, .none-square {
  border: 1px solid black;
}

// FORMS
.invalid {
  border: 1px solid red !important;
  color: red !important;
}

// Responsive
@media screen and (max-width: $break-small){
  .container {
    width: 100% !important;
  }
}

/******************
*** NAVBAR
*******************/
.navbar {
  background-color: $acc-dark;
}
.navbar-inner {
  @include page-container;
  background-color: $acc-dark !important;
  background-image: linear-gradient(to bottom, $acc-dark, #7e7e7e) !important;
  background-repeat: repeat-x;
  border-color: #252525;
  color: $text-dark;
  padding: 0;

  .brand {
    margin-left: -8px;
    margin-top: -15px;
  }

  .login > ul{
    margin-top: -15px;
  }

  .nav > li > a {
    color: $text-light;
  }

  .nav > li > a:hover {
    color: $cf-few;
  }

  .or {
    margin-top: 9px;
  }

  form {
    margin: 15px 0 -45px 0;
    width: 70%;

    .btn {
      margin-top: -10px;
    }
  }

  .signout:hover {
    cursor: pointer;
  }

  .search-icon {
    display: none;
    height: 25px;
    width: 25px;
    margin: -5px 0 0 5px;
    &:hover {
      cursor: pointer;
    }
  }
}

@media screen and (max-width: $break-small){
  .navbar-inner {
    width: 100%;
    height: 110px;
    text-align: left;

    .login {
      display: block;
      width: 100%;

      ul {
        float: none !important;
        //margin-top: 45px;
        //margin-left: 27%;
        width: 100%;
        margin: 45px auto 0 auto !important;
      }
    }
    form {
      width: 100%
    }
    .brand {
      width: 100%;
      margin-left: -16px;
      margin-bottom: 10px;
    }
    .search-icon {
      display: inline-block;
    }
    .search-btn {
      display: none;
    }
  }
}

/******************
*** FOOTER
*******************/
.footer {
  @include page-container;
  @include page-element;

  li {
    display: inline;
    padding: 40px;

    a {
      color: $text-dark;
      font-size: 16px;

      &:hover {
        color: $cf-few;
        text-decoration: none; 
      }
    }
  }
}

@media screen and (max-width: $break-small){
  .footer {
    width: 100% !important;
    //text-align: left;
    li {
     padding: 20px;
    }
  }
}
/******************
*** MAIN PAGE 
*******************/
#main-page {
  text-align: center;

  .addthis_toolbox {
    float: right;
    vertical-align: top;
    width: 200px;
  }

  // Hacky
  .crowd-factor {
    .timeslot {
      margin-left: -32px;
    }

    .location-name {
      color: $text-dark;
      display: inline-block;
      text-align: left;
      margin: 0 0 -5px 5px;
    }

    .location-place {
      display: inline-block;
    }

    .crowd-visuals {
      margin-top: -5px;
    }
  }

  .spots-tagline {
    margin: 0 0 0 200px;
    width: 500px;
  }

  .spot-types {
    @include page-element(10px, 5px, center, top);

    .spots {
      padding: 0 0 0 10px;

      &:hover {
        cursor: pointer;
      }
    }

    .arrow-side {
      height: 50px;
      margin-top: -25px;
      padding: 0 5px 0 5px;
      width: 60px;
    }

    .arrow-center {
      height: 35px;
      width: 10px
    }

    .spot {
      display: inline-block;
      padding: 20px;
      margin: 0 10px;
    }

    .b4cm-icon {
      margin-top: -10px;
    }

    .center {
      display: inline-block;
    }

    h3 {
      display: inline-block;
    }

    .type-blurb {
      text-align: left;

      h4:nth-child(2) {
        margin: -10px 0 0 30px;
      }
    }
  }

  .nearby {
    @include page-element;
  }

  .visualize {
    @include page-element;

    .visualize-tagline {
      margin: 0 auto;
    }

    h3 {
      text-align: center;
    }

    h3:nth-child(2) {
      margin: 0 0 0 26%;
    }
  }
}
/* ... */

